--- a/src/app/demo/pages/authentication/auth-signin/auth-signin.component.html
+++ b/src/app/demo/pages/authentication/auth-signin/auth-signin.component.html
@@ -36,7 +36,7 @@
             <span>&nbsp;Loading...</span>
           </button>
         } @else {
-          <button class="btn-rounded btn btn-primary mb-4" (click)="login()">Login</button>
+          <button class="btn-rounded btn btn-primary mb-4" style="width: 150px" (click)="login()">Login</button>
         }
         <!-- <p class="mb-2 text-muted">
           Forgot password?
