--- a/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
+++ b/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
@@ -30,7 +30,7 @@
       </div>
     </div> -->
     <div class="version">
-      <label disabled class="pe-auto">&copy;{{ year }} v1.0 | PJM Software Solutions</label>
+      <label disabled class="pe-auto">P.J.M IT Solutions &copy;{{ year }} | v0.525</label>
     </div>
   </div>
 </ng-scrollbar>
