--- a/src/app/theme/layout/admin/nav-bar/nav-left/nav-left.component.html
+++ b/src/app/theme/layout/admin/nav-bar/nav-left/nav-left.component.html
@@ -1,5 +1,5 @@
 <ul class="navbar-nav">
-  <li class="nav-item"><h5>PJM Software Solutions</h5></li>
+  <li class="nav-item"><h5>ABC Company</h5></li>
   <!-- <li appToggleFullScreen>
     <a href="javascript:" class="full-screen"><i class="feather icon-maximize"></i></a>
   </li> -->
